--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -478,10 +478,10 @@
         function listButtonClick() {
         	location.href = "/yu/board/boardList?boardtype=" + "[[${board.getBoardtype()}]]";
         }
-        
+
         function reportButtonClick(id) {
-        	bno = id;
-        	reported_title = $("#lec_title" + id).text();
+            bno = id;
+            reported_title = $("#board_title" + id).text();
         }
         
         function clearReport() {
