--- a/src/main/resources/templates/admin/adminSearchMatchingList.html
+++ b/src/main/resources/templates/admin/adminSearchMatchingList.html
@@ -6,10 +6,10 @@
 </th:block>
 
 <th:block layout:fragment="article">
-    <div id="article">
+	<div id="article">
       <div class="container-fluid">
         <div class="col-sm-auto article-header">
-          <h2 style="color:red" th:text=${boardtype}></h2>
+          <h2 style="color:red">매칭 - [[${boardtype}]] [검색 결과]</h2>
         </div>
         <table class="col-sm-auto table table-hover" style="margin:0">
           <thead>
@@ -30,10 +30,9 @@
             <td style="text-align:center" th:text="${matching.getMoney()}"></td>
             <td style="text-align:center" th:text="${matching.getRequest_nickname()}"></td>
             <td style="text-align:center" th:text="${matching.getRegister_date()}"></td>
-            <th:block th:unless="matchingcancel">
-            <td style="text-align:center" th:if="${matching.getCheck_success()} == F">NO</td>
-            <td style="text-align:center" th:if="${matching.getCheck_success()} == I">진행중</td>
-            <td style="text-align:center" th:if="${matching.getCheck_success()} == T">YES</td>
+                <td style="text-align:center" th:if="${matching.getCheck_success()} == F">NO</td>
+                <td style="text-align:center" th:if="${matching.getCheck_success()} == I">진행중</td>
+                <td style="text-align:center" th:if="${matching.getCheck_success()} == T">YES</td>
             <td style="text-align:center" th:text="${matching.getRead_count()}"></td>
         </tr>
         </tbody>
@@ -44,40 +43,40 @@
         	<div class="float-right">
         		Total <b style="color:red">[[${matchingList.getTotalPages()}]]</b> Pages / <b style="color:red">[[${matchingList.getTotalElements()}]]</b> Elements
         	</div>
-        </div>
+        </div>    
 
 	<nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
-       <li id="pagefirst">
-			<a th:href="'?boardtype=' + ${boardtype} + '&page=0'">
-				<span class="page-link">«</span>
-			</a>
-		</li>
-       <li style="cursor:pointer" id="pagePrev" class="page-item disabled">
-			<a th:onClick="|return pageMove('prev');|">
-				<span class="page-link">&lt;</span>
-			</a>
-		</li>
-		<li class="page-item" style="cursor:pointer" th:if="${matchingList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,matchingList.getTotalPages()-1)}">
-			<a th:if="${matchingList.getNumber()} == ${num}" style="color:red; font-weight:bold;" class="page-link" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${num}" th:text="${num+1}"></a>
-			<a th:unless="${matchingList.getNumber()} == ${num}" class="page-link" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${num}" th:text="${num+1}"></a>
-		</li>
-		<li id="pageNext">
-			<a style="cursor:pointer" th:onClick="|return pageMove('next');|">
-				<span class="page-link">&gt;</span>
-			</a>
-		</li>
-        <li>
-			<a th:if="${matchingList.getTotalPages()}>0" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${matchingList.getTotalPages()-1}">
-				<span class="page-link">»</span>
-			</a>
-			<a th:if="${matchingList.getTotalPages()}==0" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${matchingList.getTotalPages()}">
-				<span class="page-link">»</span>
-            </a>
-        </li>
-    </ul>
+    	<ul class="pagination justify-content-center">
+            <li id="pagefirst">
+            	<a th:href="'?boardtype=' + ${boardtype} + '&text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=0'">
+					<span class="page-link">«</span>
+				</a>
+			</li>
+			<li style="cursor:pointer" id="pagePrev" class="page-item disabled">
+				<a th:onClick="|return pageMove('prev');|">
+					<span class="page-link">&lt;</span>
+				</a>
+			</li>
+			<li class="page-item" style="cursor:pointer" th:if="${matchingList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0, matchingList.getTotalPages()-1)}">
+				<a th:if="${matchingList.getNumber()} == ${num}" style="color:red; font-weight:bold;" class="page-link" th:href="'?boardtype=' + ${boardtype} + '&text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${num}" th:text="${num+1}"></a>
+				<a th:unless="${matchingList.getNumber()} == ${num}" class="page-link" th:href="'?boardtype=' + ${boardtype} + '&text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${num}" th:text="${num+1}"></a>
+			</li>
+			<li id="pageNext">
+				<a style="cursor:pointer" th:onClick="|return pageMove('next');|">
+					<span class="page-link">&gt;</span>
+				</a>
+			</li>
+			<li>
+            	<a th:if="${matchingList.getTotalPages()}>0" th:href="'?boardtype=' + ${boardtype} + '&text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${matchingList.getTotalPages()-1}">
+                	<span class="page-link">»</span>
+            	</a>
+            	<a th:if="${matchingList.getTotalPages()}==0" th:href="'?boardtype=' + ${boardtype} + '&text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${matchingList.getTotalPages()}">
+					<span class="page-link">»</span>
+				</a>
+			</li>
+    	</ul>
     </nav>
-
+    
            <div class="search-wrap1 clear">
               <!-- 옵션 -->
                <form class="input-group" onsubmit="return false;">
@@ -107,30 +106,37 @@
 
 <th:block layout:fragment="script">
     <script>
-        if([[${matchingList.getTotalElements()}]] == 0) {
-            var tr = document.createElement("tr");
-            var th = document.createElement("th");
+    	var pages = getParameterByName("page");
+    	var boardtype = "[[${boardtype}]]";
+    	
+    	if([[${matchingList.getTotalElements()}]] == 0) {
+    		var tr = document.createElement("tr");
+    		var th = document.createElement("th");
+    		
+    		th.colSpan = 7;
+    		th.style.fontSize = "15px";
+    		th.style.textAlign ="center";
+    		th.innerHTML = "검색 결과가 없습니다";
+    		tr.appendChild(th);
+    		$("#tbody").append(tr);
+    	}
 
-            th.colSpan = 7;
-            th.style.fontSize = "15px";
-            th.style.textAlign = "center";
-            th.innerHTML = "등록된 글이 없습니다";
-            tr.appendChild(th);
-            $("#tbody").append(tr);
+        $("#searchBox").val("[[${text}]]");
+        $("#searchBox").focus();
+        $("#searchDate").val("[[${date}]]").prop("selected", true);
+        $("#searchOption").val("[[${option}]]").prop("selected", true);
+
+        if(pages == "") {
+            pages = 0;
         }
+        $("#page"+pages).attr("class","active");
+        
         function getParameterByName(name) {
             name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
             var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
                 results = regex.exec(location.search);
             return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
         }
-
-        var pages = getParameterByName("page");
-        if(pages == "") {
-            pages = 0;
-        }
-        $("#page"+pages).attr("class","active");
-        var boardtype = "[[${boardtype}]]";
 
         
         function pageMove(param) {
@@ -142,29 +148,9 @@
             if(pageNum + nextOrPrev < 0) return false;
             else if(pageNum + nextOrPrev > [[${matchingList.getTotalPages()}]] - 1) return false;
 
-            location.href = "/yu/admin/matchingList?boardtype=" + boardtype + "&page=" + (pageNum + nextOrPrev);
-            return true;
-        }
-        
-        function searchTotalList() {
-        	var text = $("#totalSearchBox");
-        	var date = $("#totalSearchDate option:selected");
-        	var option = $("#totalSearchOption option:selected");
-        	
-        	if(text.val().trim() == "") {
-        		alert("검색어를 입력하세요");
-        		return false;
-        	}
-        	else if(text.val().length < 2) {
-        		alert("검색어는 2글자 이상이어야 합니다");
-        		return false;
-        	}
-        	
-        	var chgText = text.val().replace(/%/gi, '%25');
-        	chgText = chgText.replace(/\\/gi, '%5C');
-        	
-        	location.href = "/yu/search/searchAllList?text=" + 
-        			chgText + "&date=" + date.val() + "&option=" + option.val();
+            location.href = "/yu/admin/searchMatchingList?boardtype=" + "[[${boardtype}]]" + "&text=" + "[[${text}]]" + "&date="
+    			+ "[[${date}]]" + "&option=" + "[[${option}]]" + "&page=" + (pageNum + nextOrPrev);
+    		return true;
         }
         
         function searchMatching() {
