--- a/src/main/resources/templates/fragments/adminBody.html
+++ b/src/main/resources/templates/fragments/adminBody.html
@@ -3,7 +3,7 @@
 <body th:fragment="main-adminBody">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-center">
-    <a class="navbar-brand" href="/yu/adminLogin">나만 따라 YU 관리자 페이지</a>
+    <a class="navbar-brand" href="/yu/admin/index">나만 따라 YU 관리자 페이지</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,29 +13,31 @@
                 매칭
             </a>
                 <div class="dropdown-menu text-center" aria-labelledby="dropdown">
-                    <a class="dropdown-item" href="#">청소</a>
-                    <a class="dropdown-item" href="#">배달</a>
-                    <a class="dropdown-item" href="#">역할대행</a>
-                    <a class="dropdown-item" href="#">심부름</a>
+                    <a class="dropdown-item" href="/yu/admin/matchingList?boardtype=청소">청소</a>
+                    <a class="dropdown-item" href="/yu/admin/matchingList?boardtype=배달">배달</a>
+                    <a class="dropdown-item" href="/yu/admin/matchingList?boardtype=역할대행">역할대행</a>
+                    <a class="dropdown-item" href="/yu/admin/matchingList?boardtype=심부름">심부름</a>
                 </div>
             </li>
-            <li class="nav-item"><a class="nav-link" href = "#">강의평가</a></li>
+            <li class="nav-item"><a class="nav-link" href = "/yu/admin/matchingCancelList">매칭 취소</a></li>
+            <li class="nav-item"><a class="nav-link" href = "/yu/admin/matchingDeleteList">삭제된 매칭</a></li>
+            <li class="nav-item"><a class="nav-link" href = "/yu/admin/lectureevaluationList">강의평가</a></li>
 
             <li class="nav-item dropdown dropdown-mobile"><a class="nav-link dropdown-toggle" style="cursor:pointer" id="dropdown" data-toggle="dropdown">
                 게시판
             </a>
                 <div class="dropdown-menu text-center" aria-labelledby="dropdown">
-                    <a class="dropdown-item" href="#">자유게시판</a>
-                    <a class="dropdown-item" href="#">중고게시판</a>
-                    <a class="dropdown-item" href="#">정보게시판</a>
-                    <a class="dropdown-item" href="#">질문게시판</a>
+                    <a class="dropdown-item" href="/yu/admin/boardList?boardtype=자유게시판">자유게시판</a>
+                    <a class="dropdown-item" href="/yu/admin/boardList?boardtype=중고게시판">중고게시판</a>
+                    <a class="dropdown-item" href="/yu/admin/boardList?boardtype=정보게시판">정보게시판</a>
+                    <a class="dropdown-item" href="/yu/admin/boardList?boardtype=질문게시판">질문게시판</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" tabindex="-1" aria-disabled="true">신고</a>
+                <a class="nav-link" tabindex="-1" aria-disabled="true" href="/yu/admin/reportList">신고</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" tabindex="-1" aria-disabled="true">탈퇴요청</a>
+                <a class="nav-link" tabindex="-1" aria-disabled="true" href="/yu/admin/nicknameChange">닉네임 변경</a>
             </li>
         </ul>
     </div>
@@ -55,7 +57,6 @@
 </header>
 
 <br>
->>>>>>> Stashed changes
 
 <div id="grid">
     <div id="menubar">
@@ -65,33 +66,38 @@
                     매칭
                 </a>
                 <div id="demo" class="collapse">
-                    <a href="#">청소</a><br>
-                    <a href="#">배달</a><br>
-                    <a href="#">역할대행</a><br>
-                    <a href="#">심부름</a>
+                    <a href="/yu/admin/matchingList?boardtype=청소">청소</a><br>
+                    <a href="/yu/admin/matchingList?boardtype=배달">배달</a><br>
+                    <a href="/yu/admin/matchingList?boardtype=역할대행">역할대행</a><br>
+                    <a href="/yu/admin/matchingList?boardtype=심부름">심부름</a>
                 </div>
             </li>
-
             <li class="nav-item">
-                <a class="nav-link" tabindex="-1" aria-disabled="true" href="#">강의평가</a>
+                <a class="nav-link" tabindex="-1" aria-disabled="true" href="/yu/admin/matchingCancelList">매칭 취소</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" tabindex="-1" aria-disabled="true" href="/yu/admin/matchingDeleteList">삭제된 매칭</a>
+            </li>
+            <li class ="nav-item">
+                <a class="nav-link" tabindex="-1" aria-disabled="true" href="/yu/admin/lectureevaluationList">강의평가</a>
             </li>
             <li class="dropdown dropright">
                 <a class="nav-link" href="#" id="navbarDroprightMenuLink" role="button" data-toggle="collapse" aria-haspopup="true" aria-expanded="false" tabindex="-1" aria-disabled="true" data-target="#demo2">
                     게시판
                 </a>
                 <div id="demo2" class="collapse">
-                    <a href="/yu/adminBoard/adminBoardList?boardtype=자유게시판">자유게시판</a><br>
-                    <a href="/yu/adminBoard/adminBoardList?boardtype=중고게시판">중고게시판</a><br>
-                    <a href="/yu/adminBoard/adminBoardList?boardtype=정보게시판">정보게시판</a><br>
-                    <a href="/yu/adminBoard/adminBoardList?boardtype=질문게시판">질문게시판</a><br>
+                    <a href="/yu/admin/boardList?boardtype=자유게시판">자유게시판</a><br>
+                    <a href="/yu/admin/boardList?boardtype=중고게시판">중고게시판</a><br>
+                    <a href="/yu/admin/boardList?boardtype=정보게시판">정보게시판</a><br>
+                    <a href="/yu/admin/boardList?boardtype=질문게시판">질문게시판</a><br>
 
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" tabindex="-1" aria-disabled="true">신고</a>
+                <a class="nav-link" tabindex="-1" aria-disabled="true" href="/yu/admin/reportList">신고</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" tabindex="-1" aria-disabled="true">탈퇴요청</a>
+                <a class="nav-link" tabindex="-1" aria-disabled="true" href="/yu/admin/nicknameChange">닉네임 변경</a>
             </li>
         </ul>
     </div>
