--- a/src/main/resources/templates/studentInfo/studentInfo.html
+++ b/src/main/resources/templates/studentInfo/studentInfo.html
@@ -105,6 +105,39 @@
       </div>
     </div>
   </div>
+  <div id="modal6" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">학년 수정하기</h5>
+          <button type="button" class="close5" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div class="form-group">
+              <div class="input-group mb-3">
+                <div class="input-group-append bg-light">
+                  <label class="input-group-text" for="grade">학년</label>
+                </div>
+                <select class="custom-select" id="syear" name="syear">
+                  <option value="select" selected>학년을 선택해주세요</option>
+                  <option value="1">1학년</option>
+                  <option value="2">2학년</option>
+                  <option value="3">3학년</option>
+                  <option value="4">4학년</option>
+                </select>
+              </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <div class="float-right">
+            <button type="button" class="btn-blue" onClick="updateGrade()">수정하기</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </th:block>
 
 <th:block layout:fragment="article">
@@ -161,6 +194,9 @@
               </div>
               <div class="float-left" style="margin-bottom:10px; margin-left:10px;">
                 <button type="button" class="btn-red" id="secession" onclick="studentDrop()">탈퇴하기</button>
+              </div>
+              <div class="float-right" style="margin-bottom:10px; margin-right:10px;">
+                <button type="button" class="btn-blue" data-toggle="modal" data-target="#modal6" data-backdrop ="static">학년 수정</button>
               </div>
               <div class="float-right" style="margin-bottom:10px; margin-right:10px;">
                   <button type="button" class="btn-blue" data-toggle="modal" data-target="#modal5" data-backdrop ="static">수정하기</button>
@@ -526,7 +562,32 @@
         $("#uploadBtn").css("display", "inline-block");
        	return true;
     }
-    
+    function updateGrade(){
+      var syear = $("#syear").val();
+
+      if(syear == "select") {
+        alert("학년을 선택해 주세요");
+        return false;
+      }
+      $.ajax ({
+        type: "PUT",
+        url: "/yu/studentInfo/updateStudentGrade",
+        data: {
+          sid: [[${session.studentInfo.getSid()}]],
+          syear:syear
+        },
+        success: function (data) {
+          if (data == "학년 변경 성공") {
+            alert(data);
+            location.href = "/yu/studentInfo/studentInfo";
+          } else
+            alert(data);
+        }, error: function () {
+          alert(error);
+          return false;
+        }
+      });
+    }
     function imageUpload() {
     	var imageFormData = new FormData($("#imageForm")[0]);
     	
