--- a/src/main/resources/templates/board/boardUpdate.html
+++ b/src/main/resources/templates/board/boardUpdate.html
@@ -18,6 +18,7 @@
               <option id="자유게시판">자유게시판</option>
               <option id="중고게시판">중고게시판</option>
               <option id="정보게시판">정보게시판</option>
+              <option id="질문게시판">질문게시판</option>
             </select>
         </div>
           <div class="form-group">
