--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -2,7 +2,7 @@
 <html lang="kr" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}" dir="ltr">
 
 <th:block layout:fragment="title">
-	<title>YU Main</title>
+    <title>YU Main</title>
 </th:block>
 
 <th:block layout:fragment="article">
@@ -16,24 +16,18 @@
             </tr>
             </thead>
             <tbody>
+			<th:block th:each="matching, num: ${matchingList}">
             <tr>
-              <th scope="row">1</th>
+              <th scope="row">
+                <b>[[${num.count}]]</b>
+                <a class="col-4" th:href="@{'/yu/matching/matchingView/'+${matching.getBno()}}" th:text="${matching.getTitle()}"></a>
+                <small class="col-4" th:text="${matching.getBoardtype()}"></small>
+                <span class="col-4" th:text=" ${matching.getRegister_date()}"></span>
+              </th>
             </tr>
-            <tr>
-              <th scope="row">2</th>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-            </tr>
-            <tr>
-              <th scope="row">4</th>
-            </tr>
-            <tr>
-              <th scope="row">5</th>
-            </tr>
-            <tr>
-              <th scope="row">6</th>
-            </tr>
+            </th:block>
+			<th:block th:if="${matchingList.size()} == 0"><tr><th scope="row">최근에 등록된 매칭이 없습니다.</th></tr>
+			</th:block>
             </tbody>
           </table>
         </div>
@@ -60,7 +54,7 @@
                     <b class="ranking-change" th:if="${word.getRankingchange()} > 0"><img class="ranking-img" th:src="@{/images/rankingup.png}">[[${word.getRankingchange()}]]</b>
                     <b class="ranking-change" th:unless="${word.getRankingchange()} > 0"><img class="ranking-img" th:src="@{/images/rankingdown.png}">[[${-word.getRankingchange()}]]</b>
                   </div>
-               </div>
+                </div>
               </th>
             </tr>
             <tr th:if="${searchRankingList.size()} == 0">
@@ -78,24 +72,15 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-              <th scope="row">1</th>
+            <tr th:each="board, num: ${boardList}" th:if="${num.count} < 7 and ${boardList.size()} != 0">
+              <th scope="row">
+                <b>[[${num.count}]]</b>
+                <a class="col-4" th:href="@{'/yu/board/boardView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a>
+                <small class="col-4" th:text="${board.getBoardtype()}"></small>
+                <span class="col-4" th:text=" ${board.getRegister_date()}"></span>
+              </th>
             </tr>
-            <tr>
-              <th scope="row">2</th>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-            </tr>
-            <tr>
-              <th scope="row">4</th>
-            </tr>
-            <tr>
-              <th scope="row">5</th>
-            </tr>
-            <tr>
-              <th scope="row">6</th>
-            </tr>
+            <tr th:unless="${boardList.size()} != 0"><th>인기 게시물이 없습니다</th></tr>
             </tbody>
           </table>
         </div>
@@ -107,19 +92,21 @@
             </tr>
             </thead>
             <tbody>
-            <th:block th:each="lectureEvaluation, num: ${lectureEvaluationList}" th:if="${num.count} < 6">
-            <tr>
-              <th scope="row">
-              <b>[[${num.count}]]</b>
-              <a class="col-4" th:href="@{'/yu/lectureevaluation/ViewLectureEvaluation/'+${lectureEvaluation.getLno()}}" th:text="${lectureEvaluation.getLecturename()}"></a>
-                <th:block th:each="num:${#numbers.sequence(1,5)}">
-                  <span  th:if="${lectureEvaluation.getStar()}>=${num}">★</span>
-                  <span  th:unless="${lectureEvaluation.getStar()}>=${num}">☆</span>
-                </th:block>
-                <small class="col-4" th:text=" ${lectureEvaluation.getProfessor()}"></small>
-                <span class="col-4" th:text=" ${lectureEvaluation.getRegister_date()}"></span></th>
-            </tr>
+            <th:block th:each="lectureEvaluation, num: ${lectureEvaluationList}" th:if="${num.count} < 7">
+              <tr>
+                <th scope="row">
+                <b>[[${num.count}]]</b>
+                <a class="col-4" th:href="@{'/yu/lectureevaluation/ViewLectureEvaluation/'+${lectureEvaluation.getLno()}}" th:text="${lectureEvaluation.getLecturename()}"></a>
+                  <th:block th:each="num:${#numbers.sequence(1,5)}">
+                    <span  th:if="${lectureEvaluation.getStar()}>=${num}">★</span>
+                    <span  th:unless="${lectureEvaluation.getStar()}>=${num}">☆</span>
+                  </th:block>
+                  <small class="col-4" th:text=" ${lectureEvaluation.getProfessor()}"></small>
+                  <span class="col-4" th:text=" ${lectureEvaluation.getRegister_date()}"></span></th>
+              </tr>
             </th:block>
+            <th:block th:if="${lectureEvaluationList.size()} == 0"><tr><th scope="row">최근에 등록된 강의평이 없습니다.</th></tr>
+			</th:block>
             </tbody>
           </table>
         </div>
