--- a/src/main/resources/templates/admin/adminIndex.html
+++ b/src/main/resources/templates/admin/adminIndex.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/adminBasic}" dir="ltr">
-<head>
-    <meta charset="UTF-8">
-    <title>Admin Login</title>
-</head>
-<body>
-
-
-
-
-
-</body>
+<th:block layout:fragment="title">
+    <title>YU Admin View</title>
+</th:block>
 </html>
